--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,21 @@ python-docx==0.8.11
 pytz==2022.1
 six==1.16.0
 tabula-py==2.3.0
+attrs==21.4.0
+colorama==0.4.4
+distro==1.7.0
+iniconfig==1.1.1
+lxml==4.8.0
+numpy==1.22.3
+packaging==21.3
+pandas==1.4.1
+pluggy==1.0.0
+py==1.11.0
+pyparsing==3.0.7
+pytest==7.1.1
+python-dateutil==2.8.2
+python-docx==0.8.11
+pytz==2022.1
+six==1.16.0
+tabula-py==2.3.0
+tomli==2.0.1
